--- a/TODO
+++ b/TODO
@@ -1,19 +1,20 @@
 
 
 Bugs:
-	- variable stack never uses the first element
+	- variable stack never uses the first element in StalaJava
 
 
 TODO:
-	- complete interpreter.stala
+	- function name to function index
+	- full error reporting and positioning
 	- run argument
 	- arg arguments
+	- escapement of asm string
+
+
+Possible next steps:
 	- buffer defines
 	- global variables (let outside function)
-	- strings
-	- escapement of asm string
-	- full error reporting and positioning
-	- label and label reference list
 
 
 Optimizations:
